> MAJOR CHANGES: 	- Error and Success Handling for Logins and Forget Password 	- Switched ForgetPassword modal component into sweetalert components 	- Fixed Therapy List Searching 	- Installed sweetalert and @sweetalert/with-react
> MINOR CHANGES:
	- Fix search result image issues

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/search-components/SearchField.css
+++ b/src/components/search-components/SearchField.css
@@ -1,12 +1,12 @@
 .searchFieldContainer {
   background-color: lavender;
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
-    url("../../assets/images/placeholders/listing_placeholder_3.jpg");
+  background-image: url("../../assets/images/we_are_us_yoga.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  */
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .searchFieldStyle {
