--- a/src/components/search-components/TherapyList.css
+++ b/src/components/search-components/TherapyList.css
@@ -23,6 +23,14 @@
   color: #79158f;
 }
 
+.therapyListStyle li:hover {
+  font-family: "AvenirLTPro-Heavy";
+}
+
+.therapyListStyle a:hover {
+  color: #79158f;
+}
+
 .therapyListStyle .col-sm-3 {
   padding-left: 0;
 }
