--- a/src/components/aboutpage-components/TopContent.css
+++ b/src/components/aboutpage-components/TopContent.css
@@ -1,23 +1,18 @@
-.aboutFluidContainer {
-  width: 1300px;
-  padding-top: 60px;
-}
-
 #aboutTitle {
-  padding-top: 70px;
+  padding-top: 180px;
   color: #79158f;
   text-align: center;
   margin-bottom: 70px;
   font-family: "AvenirLTPro-Heavy";
 }
 
-.about-paragraph {
+#about-paragraph {
   text-align: center;
   font-size: 22px;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 5%;
+  margin-right: 5%;
   font-family: "AvenirLTStd-Book";
-  color: #5B5B5B; 
+  color: #5b5b5b;
 }
 
 .aboutContainer {
@@ -30,32 +25,8 @@
   width: 5000px;
 }
 
-.peopleContainer {
-  padding-top: 30px;
-  margin-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 170px;
-  padding-right: 170px;
-  position: relative;
-  border-style: solid;
-  justify-content: center;
-}
-
-#mainFrame {
-  display: block;
-  border-radius: 50%;
-  width: 250px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#linePadding {
-  margin-top: 100px;
-}
-
 #bigParagraph {
   font-family: "AvenirLTStd-Book";
   font-size: 21px;
   text-align: left;
 }
-
