> MAJOR CHANGES: 	- Practitioner Profile is now Dynamic 	- Added route towards practitioner profile from temp practitioner profile
> MINOR CHANGES:
	- Fixed some warnings on the console

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/practitionerprofile-components/ContactCard.css
+++ b/src/components/practitionerprofile-components/ContactCard.css
@@ -43,8 +43,17 @@
 }
 
 .contact-card-box #purple-card-heading {
+  display: inline-block;
   color: #79158f;
   font-family: "AvenirLTPro-Heavy";
+}
+
+.contact-card-box .horizontal-line-card {
+  display: block;
+  border-top: 1px solid darkgray;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  content: " ";
 }
 
 @media (max-width: 768px) and (min-width: 550px) {
