> MAJOR CHANGES: 	- Uploading Images now works and is sent to AWS S3 	- Redux is now fully functional (Gets the Current User) 	- Search Filter for Services on Profile Setup 	- Training can now be removed after adding it 	- Removed TempPractitionerProfile 	- Connected some Components to Redux
> MINOR CHANGES:
	- Fixed minor id naming issues
	- Setup some code for Specialist Register

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/practitionerprofile-components/ProfileInformation.css
+++ b/src/components/practitionerprofile-components/ProfileInformation.css
@@ -99,8 +99,9 @@
   font-size: 19px;
   font-family: "AvenirLTStd-Book";
 }
-#suburb,
-#city {
+
+#suburb-profile,
+#city-profile {
   font-size: 19px;
   font-family: "AvenirLTStd-Book";
   color: #5b5b5b;
