--- a/src/components/practiceprofile-component/OurSpecialists.css
+++ b/src/components/practiceprofile-component/OurSpecialists.css
@@ -1,63 +1,78 @@
 .our-specialists {
-    width: 500px;
-    height: 400px;
-    padding-top: 13px;
-    padding-left: 17px;
-    box-shadow: none;
-    text-align: left;
-    position: relative;
-    color: "#5B5B5B";
-    font-family: "AvenirLTStd-Book";
+  width: 500px;
+  height: 400px;
+  padding-top: 13px;
+  padding-left: 8%;
+  box-shadow: none;
+  text-align: left;
+  position: relative;
+  color: #5b5b5b;
+  font-family: "AvenirLTStd-Book";
 }
-.container-dimensions{
-    margin-bottom: 20vw;
+
+.container-dimensions {
+  margin-bottom: 20vw;
 }
-@media (max-width: 768px) and (min-width: 550px){
-    .our-specialists {
-      margin-top: 50px;
-      margin-bottom: 50px;
-      margin-left: 20%;
-      display: flex;
-    }
+
+@media (max-width: 768px) and (min-width: 550px) {
+  .our-specialists {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 20%;
+    display: flex;
   }
-
-.our-specialists .card-title{
-    color: #5b5b5b;
-    font-family: "AvenirLTPro-Heavy";
-    padding-bottom: 20px;
 }
 
-.our-specialists .specialists-name{
-    text-align: right;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-    color: #79158f;
-    font-family: "AvenirLTPro-Heavy";;
-    font-size: 16px;
+.our-specialists .card-title {
+  color: #5b5b5b;
+  font-family: "AvenirLTPro-Heavy";
+  padding-bottom: 20px;
 }
 
-.our-specialists .card-text{
-    color: #79158f;
-    font-family: "AvenirLTPro-Heavy";
-    font-size: 14px;
+.our-specialists #specialists-name {
+  display: table;
+  font-family: "AvenirLTPro-Heavy";
+  font-size: 19px;
+  padding-top: 15%;
 }
 
-.placeholder-img-frame{
-    border-radius: 50%;
-    border: 1px solid #ddd;
-    padding: 5px;
-    width: 120px;
-    
+.our-specialists .card-text {
+  color: #79158f;
+  font-family: "AvenirLTStd-Book";
+  font-size: 14px;
+  float: left;
+  padding-bottom: 8%;
+}
+
+.placeholder-img-frame {
+  border-radius: 50%;
+  padding: 5px;
+  width: 120px;
+  float: left;
+  margin-right: 15px;
+}
+
+.our-specialists .card-img {
+  height: 100%;
 }
 
 @media (max-width: 900px) {
-    #placeholder-img-frame {
-        display: ruby;
-        margin-left: 10px;
-        margin-right: 10px;
-        max-height: 10px;
-        max-width: 10px;
-
-    }
+  #placeholder-img-frame {
+    display: ruby;
+    margin-left: 10px;
+    margin-right: 10px;
+    max-height: 10px;
+    max-width: 10px;
   }
+}
+
+.our-specialists .card-body {
+  width: 500px;
+  padding-left: 0%;
+  margin-top: -50px;
+}
+
+.our-specialists .card {
+  border: none;
+  padding-top: 8%;
+}
