--- a/src/components/for-profile-components/ContactCard.css
+++ b/src/components/for-profile-components/ContactCard.css
@@ -3,12 +3,19 @@
   width: 380px;
   height: 332px;
   padding-top: 13px;
-  padding-left: 17px;
+  padding-left: 5%;
+  padding-right: 5%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: left;
   position: relative;
   color: "#5B5B5B";
   font-family: "AvenirLTStd-Book";
+}
+
+@media (max-width: 991px) {
+  .contact-card-box {
+    width: 100%;
+  }
 }
 
 .contact-card-box .card-title {
@@ -30,21 +37,30 @@
 }
 
 .contact-card-box #purple-card-heading {
+  display: inline-block;
   color: #79158f;
   font-family: "AvenirLTPro-Heavy";
 }
 
-@media (max-width: 768px) and (min-width: 550px){
+.contact-card-box .horizontal-line-card {
+  display: block;
+  border-top: 1px solid darkgray;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  content: " ";
+}
+
+@media (max-width: 768px) and (min-width: 550px) {
   .contact-card-box {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 5%;
+    margin-bottom: 5%;
     margin-left: 20%;
     display: flex;
   }
 }
 
-@media (max-width: 551px){
-  .contact-card-box{
+@media (max-width: 551px) {
+  .contact-card-box {
     margin-top: 50px;
     margin-bottom: 50px;
   }
