--- a/src/components/practiceprofile-components/PracticeProfileInfo.css
+++ b/src/components/practiceprofile-components/PracticeProfileInfo.css
@@ -8,26 +8,31 @@
   margin-top: 10px;
 }
 
-
-@media (max-width: 900px) {
+@media (max-width: 991px) {
   #logo-frame {
-    display: flexbox;
+    display: block;
     margin: 0 auto;
-    margin-top: 190px;
-    margin-left: 40px;
+    margin-top: 200px;
   }
 }
 
-.practice-description-card{
+.practice-description-card {
   outline: none;
   border: none;
 }
 
-.practice-description-card .card-title{
-  margin-top: -120px;
+.practice-description-card .card-title {
+  margin-top: -0px;
   margin-left: -20px;
   font-family: "AvenirLTPro-Heavy";
   color: #5b5b5b;
+}
+
+@media (max-width: 991px) {
+  .practice-description-card .card-body {
+    margin-left: 6%;
+    margin-right: 12%;
+  }
 }
 
 .container-dimensions {
@@ -36,17 +41,24 @@
   margin-top: -200px;
   padding-bottom: 80px;
 }
-
-@media (max-width: 900px) {
+@media (max-width: 991px) {
   .container-dimensions {
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-left: 0%;
   }
 }
 
-.Info {
+.info {
   margin-right: 0 !important;
   padding-right: 0 !important;
+  margin-top: -9%;
+}
+
+@media (max-width: 900px) {
+  .info {
+    margin-top: 10px;
+  }
 }
 
 #category-text {
@@ -66,7 +78,7 @@
   text-align: left;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 991px) {
   #category,
   #practice-name,
   #location,
@@ -76,20 +88,21 @@
   }
 }
 
-.details {
+#covered-by-box {
+  text-align: center;
   background-color: #f2e9f4;
   color: #79158f;
   font-family: "AvenirLTStd-Book";
   font-size: 19px;
   padding-top: 7px;
   padding-bottom: 7px;
-  text-align: center;
-  width: 192px;
+  width: 192px; 
 }
 
-@media (max-width: 900px) {
-  .details {
- margin-left: 25%;
+@media (max-width: 991px){
+  #covered-by-box{
+    max-width: 192px;
+    margin: 0 auto;
   }
 }
 
@@ -165,19 +178,43 @@
   font-size: 1.3em;
 }
 
-.contact-card{
-  padding-left: 8%;
+@media (max-width: 991px) {
+  .profile-accordion-section {
+    padding-left: 8%;
+    padding-right: 12%;
+  }
 }
 
-@media (max-width: 560px) {
-  .contact-card {
-    padding-right: 60%;
-    margin-left: -40px;
+.practice-contact-card-col {
+  padding-left: 8%;
+  padding-right: 0%;
+  margin-right: 0%;
+  margin-left: 0%;
+}
+
+@media (max-width: 550px) {
+  .practice-contact-card-col {
+    padding-left: 0%;
+  }
+}
+
+@media (max-width: 768px) and (min-width: 550px) {
+  .practice-contact-card-col {
+    margin-left: -20%;
+    padding-left: 0%;
+  }
+}
+
+@media (max-width: 991px) and (min-width: 769px) {
+  .practice-contact-card-col {
+    margin-top: -20%;
+    margin-bottom: 5%;
+    padding-left: 0%;
   }
 }
 
 @media (max-width: 560px) {
-  .our-specialists{
+  .our-specialists {
     padding-right: 60%;
     margin-right: -40px;
   }
