> MAJOR CHANGES: 	- Redux is now fully functional with the website 	- Made Redux stay with the local storage 	- Refactored some API calls as the endpoints from the Server was refactored as well 	- Login form will now handle the entry point of a user's redux login 	- Conditional Routing of Navigation Bar as well as Routes 	- Cognito User is now deleted when there's any errors while registering the user
> MINOR CHANGES:
	- Some warnings and errors on the console fixed
	- Some progress on the profile setup
	- Some Error Handling
	- Visual Bugs from responsiveness (Footer, New Prac Cards, and About parts of the practitioner profile)

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/Footer.css
+++ b/src/components/general-components/Footer.css
@@ -13,6 +13,7 @@
 .footerStyle .nav-link {
   display: flex;
   position: relative;
+  margin-left: 16px !important;
   color: #5b5b5b !important;
 }
 
@@ -43,9 +44,10 @@
   left: 0;
 }
 
-@media screen and (min-width: 992px) {
-  .footerStyle .nav-link {
-    margin-left: 16px !important;
+@media screen and (max-width: 992px) {
+  .footerStyle .navbar-nav {
+    display: flex;
+    flex-direction: row;
   }
 }
 
