--- a/src/components/practitionerprofile-components/ProfileInformation.css
+++ b/src/components/practitionerprofile-components/ProfileInformation.css
@@ -94,6 +94,14 @@
   color: #5b5b5b;
 }
 
+.membership-link u {
+  color: #79158f;
+}
+
+.membership-link u:hover {
+  color: #b823dad3;
+}
+
 #category-text {
   color: #79158f;
   font-size: 19px;
