--- a/src/components/practitioner-components/NewPractitionerCard.css
+++ b/src/components/practitioner-components/NewPractitionerCard.css
@@ -39,7 +39,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background: linear-gradient(transparent 320px, #F3F1F3);
+  background: linear-gradient(transparent 320px, #f3f1f3);
   pointer-events: none;
 }
 
@@ -73,6 +73,9 @@
   border: transparent !important;
 }
 
+.newPracCardStyleMobile img {
+  max-height: 300px;
+}
 
 .newPracCardStyleMobile .card-title {
   color: #79158f !important;
@@ -104,7 +107,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background: linear-gradient(transparent 250px, #F3F1F3);
+  background: linear-gradient(transparent 300px, #f3f1f3);
 }
 
 .newPracCardStyleMobile .card-img-overlay {
