--- a/src/components/register-login-components/ProfileSetup.css
+++ b/src/components/register-login-components/ProfileSetup.css
@@ -4,6 +4,12 @@
   padding-right: 200px;
 }
 
+.form-control:disabled,
+.form-control[readonly] {
+  color: rgb(85, 85, 85);
+  background-color: #dddddd;
+}
+
 .profileSetupStyle h2 {
   text-align: center;
   color: #79158f;
