> MAJOR CHANGES: 	- Integrated Stripe with both the front-end and back-end 	- Added some additional user information to know whether a user (practitioner) already has a company or not 	- Register/Login Flow almost done (Need more testing) 	- Changed the react routing to fit the register/login flow
> MINOR CHANGES:
	- Installed necessary packages for react and stripe

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/register-login-components/ProfileSetup.css
+++ b/src/components/register-login-components/ProfileSetup.css
@@ -4,12 +4,6 @@
   padding-right: 200px;
 }
 
-.form-control:disabled,
-.form-control[readonly] {
-  color: rgb(85, 85, 85);
-  background-color: #dddddd;
-}
-
 .profileSetupStyle h2 {
   text-align: center;
   color: #79158f;
@@ -134,7 +128,7 @@
   background-color: #b823dad3;
 }
 
-/* When the checkbox is checked, add a blue background */
+/* When the checkbox is checked */
 .serviceContainer input:checked ~ .checkBoxFill {
   background-color: #79158f;
 }
