--- a/src/components/practitioner-components/NewPractitionerCard.css
+++ b/src/components/practitioner-components/NewPractitionerCard.css
@@ -44,14 +44,20 @@
 }
 
 .newPracCardStyle .card-img-overlay {
+  max-width: 200px;
+  color: white;
   right: 0;
   padding: 0;
-  top: -27px;
+  top: -24px;
   position: relative;
   pointer-events: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #newPracCardType {
+  min-width: 150px;
   color: white;
   background-color: #79158f;
   padding: 5px 15px 5px 15px;
@@ -123,4 +129,7 @@
   background-color: #79158f;
   padding: 5px 15px 5px 15px;
   font-size: 2vh;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
