> MAJOR CHANGES: 	- Made the images dynamic for the practitioner and search components 	- Started the Edit Profile Page 	- Profile Setup Fixes 	- Membership Form Flow Fixes
> MINOR CHANGES:
	- Fixed some sweet alert bugs

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/register-login-components/LoginForm.css
+++ b/src/components/register-login-components/LoginForm.css
@@ -111,3 +111,11 @@
   font-size: 2.5vh;
   font-weight: 500;
 }
+.googleLogin {
+  margin-top: 50px;
+  height: 70px !important;
+}
+
+.googleLogin span {
+  margin-bottom: 0px;
+}
